# 3DObjectRecognitionPipeline

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  pipeline.yaml
apps/: reconstruct3D.cpp  stereoCalib.cpp  stereoMatch.cpp  svm.cpp  viewer.cpp
data/random/: cloud0.pcd  cloud1.pcd  cloud10.pcd  cloud11.pcd  cloud12.pcd  cloud13.pcd  cloud14.pcd  cloud15.pcd  cloud16.pcd  cloud17.pcd  cloud18.pcd  cloud19.pcd  cloud2.pcd  cloud20.pcd  cloud3.pcd  cloud4.pcd  cloud5.pcd  cloud6.pcd  cloud7.pcd  cloud8.pcd  cloud9.pcd
include/: 308HistRecognitionPipeline.cpp  Config.h  ConfigReader.h  Hist308RecognitionPipeline.h  KeyPointDetector.h  Node.h  ParameterBuilder.h  RecognitionPipeline.h  SurfaceNormalEstimator.h  config_mappings.h  configdefs.h  feature_estimation.h  loader.h  mappings.h  reconstruct.h  typedefs.h  utils.h
include/acquisition/: CCFaceDetector.h  StereoVision.h
include/classifier/: Classifier.h  IClassifier.h  KNN.h  NormalBayes.h  Subject.h  SubjectNotFound.h  Svm.h
include/detection/: CCFaceDetector.h  HOGDetector.h
include/featuredescriptor/: CVPFHExtractor.h  FPFHExtractor.h  FeatureExtractor.h  RIFTFeatureExtractor.h  VPFHExtractor.h
include/pipeline/: Config.h  Hist308RecognitionPipeline.h  Hist33RecognitionPipeline.h  RecognitionPipeline.h  RecognitionPipelineFactory.h
include/preprocessor/: GradientIntensityEstimator.h  KeypointDetector.h  SIFTKeyPointDetector.h  SurfaceNormalEstimator.h  filters.h
scripts/: reconstruct.py
src/: Config.cpp  ConfigReader.cpp  KeyPointDetector.cpp  ParameterBuilder.cpp  RecognitionPipeline.cpp  SurfaceNormalEstimator.cpp  faceDetector.cpp  generateSyntheticData.cpp  main.cpp  main_old.cpp  regionGrowing.cpp
src/acquisition/: CCFaceDetector.cpp  StereoVision.cpp
src/detection/: CCFaceDetector.cpp  HOGDetector.cpp
src/featuredescriptor/: VPFHExtractor.cpp
src/pipeline/: Config.cpp  ConfigReader.cpp
src/preprocessor/: SIFTKeyPointDetector.cpp  SurfaceNormalEstimator.cpp
